@@ -1,6 +1,8 @@
 1.8.32
 ------
 
+(RB=170403)
+Added PatchHelper class with method which allows applying projection on patch.
 
 1.8.31
 ------
